Fix a broken CSS color

--- a/oatcake.css
+++ b/oatcake.css
@@ -9,7 +9,7 @@
   --oatcake-kbd-background-color: #fafbfc;
   --oatcake-kbd-color: #444d56;
   --oatcake-kbd-border-color: #c6cbd1;
-  --oatcake-kbd-border-bottom-color: #959dat;
+  --oatcake-kbd-border-bottom-color: rgb(68, 77, 86);
   --oatcake-badge-background-color: #343a40;
   --oatcake-badge-color: #fff;
   --oatcake-badge-focus-border-color: #2b90d9;
